--- a/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/13-Archive/Data/Contents.plist
@@ -14,7 +14,7 @@
 				<key>markedImages</key>
 				<array>
 					<string>FEFCB4D8-D335-4887-B8F2-49D59D956B0C.jpeg</string>
-					<string>4D267D51-8AC3-470B-BC07-ADBBD8E77749.jpeg</string>
+					<string>A5988491-8ACF-4BDE-9385-42F00D75F820.png</string>
 					<string>4CAF9111-5B27-4B3F-86D9-81D4D825CEFC.jpeg</string>
 					<string>F0E0EFD4-801C-401E-B4DE-EBD64F653714.jpg</string>
 					<string>85378E5C-1679-4C1C-9798-44291C7EA170.jpeg</string>
@@ -29,7 +29,9 @@
 					<string>A5D5C7B5-A894-4B85-81EB-BE2B5B231C3A.jpeg</string>
 					<string>C1C3C131-9B15-49E4-85AB-B24B18F54CE4.jpeg</string>
 					<string>88772E34-3626-4E83-8B68-B76D7CFD280D.jpeg</string>
+					<string>9A8198B2-CD70-46CF-B80F-B284C7335218.jpg</string>
 					<string>D25A93E9-D664-4A79-B133-A3E8DDE86047.jpg</string>
+					<string>77B73048-FCBE-4344-8F08-2855692E793B.jpg</string>
 					<string>47C83528-ED9A-4841-A0A3-FCE658098CC8.png</string>
 					<string>6AD6ED14-3F3F-4433-AA26-C7096E9F5554.JPG</string>
 					<string>824DB919-9A6D-46C5-B45A-D7BD20F8A947.png</string>
@@ -44,6 +46,7 @@
 					<string>3A11B0C1-9DAE-44AC-B3BA-AC20129F6A6B.png</string>
 					<string>97610C34-CA0D-4A40-81E3-935A5198EB15.png</string>
 					<string>0D23015F-A18C-4669-8E4F-02FED6B490C4.jpeg</string>
+					<string>CA62E549-36E9-429D-813D-F52E22EE4E61.jpg</string>
 					<string>3D22F3F8-774D-48F3-BA8C-E01132B08199.jpeg</string>
 					<string>5D61BD56-6CDB-4CBB-B59E-06361F9E61E3.jpg</string>
 					<string>5259EB3C-8F9B-49B0-98B7-6F3619CEDC51.png</string>
@@ -67,6 +70,7 @@
 					<string>FB2ED7F3-BD34-458F-9541-33A4A28F7DB6.png</string>
 					<string>C69624CF-0442-44EB-A38D-1FE418C6CC31.jpg</string>
 					<string>564025D5-0062-4CCB-BEF7-4FB06B3FD766.jpg</string>
+					<string>0F3986A7-8A92-4B24-872F-EF0775EBF014.jpg</string>
 					<string>ECCD3F1A-3BF0-4C14-8E42-742AD3ED770A.jpg</string>
 					<string>2B2723F5-C4B3-42C6-BBD8-C7A7E9989A98.jpg</string>
 					<string>17E14FC6-211A-4C35-BEB1-36B9703E520C.jpg</string>
@@ -74,13 +78,14 @@
 					<string>ED0CB92F-FFF8-411E-97D1-AD86C92D334A.png</string>
 					<string>1EEF836A-66E9-4929-8E20-E273DF71BC6E.jpeg</string>
 					<string>29EF119E-8645-49CC-84DB-4DCF2F02CEF1.png</string>
+					<string>EB709EEC-D4EE-481D-AF8C-A379A29DD612.jpg</string>
 					<string>E60A35D9-6F04-4DBF-8694-277C91A35AE7.JPG</string>
 					<string>4D8E34CF-B756-4351-A45C-19E462C4B2BB.png</string>
 					<string>921BAA7E-FDF7-4456-B843-2CED84DAF2D8.png</string>
-					<string>A5988491-8ACF-4BDE-9385-42F00D75F820.png</string>
+					<string>4D267D51-8AC3-470B-BC07-ADBBD8E77749.jpeg</string>
 				</array>
 				<key>previousImageLibraryPath</key>
-				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-10-07 #1052511CE</string>
+				<string>/Users/sharonwilliams/Library/Containers/com.realmacsoftware.rapidweaver8/Data/Library/Application Support/Stacks 4/Stacks Image Backup 22-10-19 #1326054DD</string>
 				<key>stacks3</key>
 				<data>
 				YnBsaXN0MDDUAAEAAgADAAQABQAGAAcADFgkdmVyc2lv
