--- a/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/1-Core-Team/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/1-Core-Team/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-11-14T16:49:56Z</date>
+						<date>2022-12-02T16:23:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -800,6 +800,16 @@
 								<key>Size</key>
 								<integer>350503</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
@@ -824,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PL/xOE9UxWoe
-								aRjzuf+1IA==
+								xMX1FDhwb0DJ
+								6M/sOJWJ6g==
 								</data>
 								<key>Size</key>
-								<integer>324476</integer>
+								<integer>324485</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
