--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -14,9 +14,10 @@
 		<string>page70</string>
 		<string>page38</string>
 		<string>page2</string>
+		<string>page3</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -25,7 +26,7 @@
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page29</string>
+		<string>page37</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
