--- a/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/07-Events-0026-Programs/ChildPages/2-Seminars-0026-Tutorials/ChildPages/1-Talkboctopus/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-09T15:51:11Z</date>
+						<date>2022-12-13T15:00:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1094,11 +1094,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZIyxmyk4I159
-								mEoNf50nMg==
+								tNGocyV4iJrq
+								wWYfnnV/Zw==
 								</data>
 								<key>Size</key>
-								<integer>361181</integer>
+								<integer>361322</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
