--- a/vermontcomplexsystems-foundation.rw8/Pages/11-Community/ChildPages/4-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/11-Community/ChildPages/4-Contact/Contents.plist
@@ -37,7 +37,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-09T15:34:55Z</date>
+						<date>2022-12-13T15:00:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,6 +132,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page43.css</key>
 							<dict>
 								<key>Digest</key>
@@ -156,11 +166,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ezonDL3tPfMO
-								v0LLcyzq/A==
+								xQ+IH1lsWJ1g
+								k5gGXsHzRQ==
 								</data>
 								<key>Size</key>
-								<integer>46599</integer>
+								<integer>46710</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
