--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -9,6 +9,7 @@
 		<string>page9</string>
 		<string>page16</string>
 		<string>page87</string>
+		<string>page53</string>
 		<string>page21</string>
 		<string>page69</string>
 		<string>page70</string>
@@ -17,7 +18,7 @@
 		<string>page3</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -26,7 +27,7 @@
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page91</string>
+		<string>page43</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
