update Masters and PhD pages
remove STAT 241 and remove second instance (duplicate listing) of STAT 251 from electives sections of Masters and PhD pages; update Defense Timetable PDF on PhD page to 2022-2023 version

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-09T15:34:55Z</date>
+						<date>2022-12-22T19:38:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -340,6 +340,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page7.css</key>
 							<dict>
 								<key>Digest</key>
@@ -364,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VwADrsggMshb
-								RnIbihePfw==
+								uEylfZGOFkB7
+								MYuQo5nMKw==
 								</data>
 								<key>Size</key>
-								<integer>133050</integer>
+								<integer>133102</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
