--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-09T15:34:55Z</date>
+						<date>2022-12-22T19:18:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -330,6 +330,16 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wgmIAuepvJFg
+								INqwDCfPXQ==
+								</data>
+								<key>Size</key>
+								<integer>1879</integer>
+							</dict>
 							<key>files/stacks_page_page0.css</key>
 							<dict>
 								<key>Digest</key>
@@ -354,11 +364,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								xIPLG00Zr7uV
-								hTwzHAt+Sg==
+								RiPCaItxr1hx
+								dHFosk6D8Q==
 								</data>
 								<key>Size</key>
-								<integer>134286</integer>
+								<integer>134307</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
