--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-22T19:38:11Z</date>
+						<date>2022-12-23T13:00:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uEylfZGOFkB7
-								MYuQo5nMKw==
+								yWj05M7wWYLG
+								tN8aUTU/TQ==
 								</data>
 								<key>Size</key>
-								<integer>133102</integer>
+								<integer>132993</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
