update Core Faculty page
update Jean-Gabriel Young's GitHub icon on Core Faculty page

--- a/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/1-Core-Team/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/10-People/ChildPages/1-Core-Team/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-13T15:00:58Z</date>
+						<date>2023-01-20T18:05:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -804,11 +804,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wgmIAuepvJFg
-								INqwDCfPXQ==
+								50GRTTbiED16
+								GoEnKyM7jQ==
 								</data>
 								<key>Size</key>
-								<integer>1879</integer>
+								<integer>1325</integer>
 							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FATKmsY1MlCU
-								UM9lZpkV1w==
+								3WkNmIUjpG9P
+								gAeuQTiSbQ==
 								</data>
 								<key>Size</key>
-								<integer>324525</integer>
+								<integer>324539</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
