update Master's and PhD pages
update More Information and Questions links on Master's page; update Questions link and funding wording on PhD page

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-23T13:00:14Z</date>
+						<date>2023-01-23T00:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -344,41 +344,41 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wgmIAuepvJFg
-								INqwDCfPXQ==
+								50GRTTbiED16
+								GoEnKyM7jQ==
 								</data>
 								<key>Size</key>
-								<integer>1879</integer>
+								<integer>1325</integer>
 							</dict>
 							<key>files/stacks_page_page7.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								4q4L5vqhCKUy
-								OKeh0oFOQg==
+								xCwrAwKhgMRg
+								j1y/Dbxe9g==
 								</data>
 								<key>Size</key>
-								<integer>224478</integer>
+								<integer>218103</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rE5IU20HYLcE
-								cMAKF4shCA==
+								6Kl0iemIu+qe
+								MFk5mn5KDw==
 								</data>
 								<key>Size</key>
-								<integer>24633</integer>
+								<integer>24472</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yWj05M7wWYLG
-								tN8aUTU/TQ==
+								XM+JDAHtdEet
+								XLApdOmmwQ==
 								</data>
 								<key>Size</key>
-								<integer>132993</integer>
+								<integer>128904</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
