--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Education/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2022-12-23T13:00:14Z</date>
+						<date>2023-01-23T00:49:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -330,35 +330,45 @@
 								<key>Size</key>
 								<integer>19463</integer>
 							</dict>
+							<key>files/stacks.css</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								50GRTTbiED16
+								GoEnKyM7jQ==
+								</data>
+								<key>Size</key>
+								<integer>1325</integer>
+							</dict>
 							<key>files/stacks_page_page0.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LF616AMzyLtZ
-								0YgIcj8+eQ==
+								kWFGmSpsgD3m
+								5ptv50z/NA==
 								</data>
 								<key>Size</key>
-								<integer>218430</integer>
+								<integer>210973</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HFfyv1AzJBh9
-								WYgL1ZD7og==
+								6Kl0iemIu+qe
+								MFk5mn5KDw==
 								</data>
 								<key>Size</key>
-								<integer>24633</integer>
+								<integer>24472</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								grapNXEjI2u7
-								EiFkAeE7ZQ==
+								8tQudVjCkV8M
+								/9P1nYqWaQ==
 								</data>
 								<key>Size</key>
-								<integer>134198</integer>
+								<integer>129673</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
